Remove dependencies on Java 8, to allow older Android versions to use it